Create button style

--- a/app/index.html
+++ b/app/index.html
@@ -112,7 +112,7 @@
           <p class="lead">まずはあなたが学びたい、挑戦したい分野を申し込みフォームで私たちに教えてください。
 参加は無料です。</p>
 
-          <button type="button" class="btn btn-primary btn-lg">独学道場に申し込む</button>
+          <button type="button" class="marketing-btn">独学道場に申し込む</button>
         </div>
       </div>
 
