--- a/app/index.html
+++ b/app/index.html
@@ -117,7 +117,16 @@
       </div>
 
       <div class="footer">
-        <p>Dokugaku Dojo</p>
+        <div class="row">
+          <div class="col-lg-4">
+            <p>Dokugaku Dojo</p>
+            <p>独学道場は、あなたと彼らの間に絆をつくる、世界最高のオンライン学習コミュニティです。</p>
+          </div>
+          <div class="col-lg-4">
+            <p>Dokugaku Dojo</p>
+            <p>独学道場は、あなたと彼らの間に絆をつくる、世界最高のオンライン学習コミュニティです。</p>
+          </div>
+        </div>
       </div>
     </div>
 
