--- a/app/index.html
+++ b/app/index.html
@@ -61,25 +61,13 @@
       </div>
 
       <div class="row">
-        <div class="col-xs-12 col-md-3">
-          <a href="#" class="thumbnail">
-            <img src="http://lorempixel.com/400/300/" alt="thumb">
-          </a>
-          <a href="#" class="thumbnail">
-            <img src="http://lorempixel.com/400/300/" alt="thumb">
-          </a>
-          <a href="#" class="thumbnail">
-            <img src="http://lorempixel.com/400/300/" alt="thumb">
-          </a>
-          <a href="#" class="thumbnail">
-            <img src="http://lorempixel.com/400/300/" alt="thumb">
-          </a>
-          <a href="#" class="thumbnail">
-            <img src="http://lorempixel.com/400/300/" alt="thumb">
-          </a>
-          <a href="#" class="thumbnail">
-            <img src="http://lorempixel.com/400/300/" alt="thumb">
-          </a>
+        <div class="col-xs-12 thumbnails">
+          <div class="thumbnail" style="background-image: url('https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150');"></diV>
+          <div class="thumbnail" style="background-image: url('https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150');"></diV>
+          <div class="thumbnail" style="background-image: url('https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150');"></diV>
+          <div class="thumbnail" style="background-image: url('https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150');"></diV>
+          <div class="thumbnail" style="background-image: url('https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150');"></diV>
+          <div class="thumbnail" style="background-image: url('https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150');"></diV>
         </div>
       </div>
 
@@ -89,7 +77,7 @@
           <p class="lead">Dokugaku Dojoのメンバーです。世界中の独学マスターを募集してます。</p>
 
           <div class="thumbnail">
-            <img src="http://lorempixel.com/200/200/" alt="thumb">
+            <img src="https://placehold.it/200x200" alt="thumb">
             <div class="caption">
               <h3>深山 雄太</h3>
               <p>エンジニア</p>
@@ -97,7 +85,7 @@
           </div>
 
           <div class="thumbnail">
-            <img src="http://lorempixel.com/200/200/" alt="thumb">
+            <img src="https://placehold.it/200x200" alt="thumb">
             <div class="caption">
               <h3>北郷 裕太郎</h3>
               <p>エンジニア</p>
