--- a/app/index.html
+++ b/app/index.html
@@ -39,9 +39,11 @@
       </div>
 
       <div class="jumbotron">
-        <h1>世界中に、仲間を作ろう。</h1>
+        <div class="cover">
+        <h1><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>世界中に、仲間を作ろう。</h1>
         <p class="lead">世界中に、あなたと同じくらい、そして あなたよりもがんばっている仲間がいる。独学道場は、あなたと彼らの間に絆をつくる、世界最高のオンライン学習コミュニティです。</p>
         <!-- <p><a class="btn btn-lg btn-success" href="#">Splendid!</a></p> -->
+        </div>
       </div>
 
       <div class="row marketing">
