Create flow section

--- a/app/index.html
+++ b/app/index.html
@@ -52,15 +52,27 @@
         <div class="col-lg-12">
           <h3>Dojoの流れ</h3>
           <p class="lead">リアルでもオンラインでも一人の時間を効率よく使いましょう。</p>
-
-          <h4>あなた専用のプランを考えましょう</h4>
-          <p>「師匠」が、あなたがまず取り組むべき学習内容が詰まった「特訓ノート」を用意します。集中して学習する日時場所を確保する「道場参加シフト」を一緒につくりましょう。</p>
-
-          <h4>適度なプレッシャーの中で手を動かします</h4>
-          <p>道場活動中、同期や師匠に「現在やっていること」を宣言してもらいます。あなたの進捗を、みんなが期待しています。私たち道場主催者は、あなたの進捗をこまめにウェブ上で発信します</p>
-
-          <h4>成果発表に向けてモチベーションを高めましょう</h4>
-          <p>「師匠」が、あなたがまず取り組むべき学習内容が詰まった「特訓ノート」を用意します。集中して学習する日時場所を確保する「道場参加シフト」を一緒につくりましょう。</p>
+          <div class="flow-section">
+            <div class="flow-image" style="background-image: url('https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150');"></div>
+            <div class="flow-body">
+              <h4>あなた専用のプランを考えましょう</h4>
+              <p>「師匠」が、あなたがまず取り組むべき学習内容が詰まった「特訓ノート」を用意します。集中して学習する日時場所を確保する「道場参加シフト」を一緒につくりましょう。</p>
+            </div>
+          </div>
+          <div class="flow-section odd">
+            <div class="flow-image" style="background-image: url('https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150');"></div>
+            <div class="flow-body">
+              <h4>適度なプレッシャーの中で手を動かします</h4>
+              <p>道場活動中、同期や師匠に「現在やっていること」を宣言してもらいます。あなたの進捗を、みんなが期待しています。私たち道場主催者は、あなたの進捗をこまめにウェブ上で発信します</p>
+            </div>
+          </div>
+          <div class="flow-section">
+            <div class="flow-image" style="background-image: url('https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150');"></div>
+            <div class="flow-body">
+              <h4>成果発表に向けてモチベーションを高めましょう</h4>
+              <p>「師匠」が、あなたがまず取り組むべき学習内容が詰まった「特訓ノート」を用意します。集中して学習する日時場所を確保する「道場参加シフト」を一緒につくりましょう。</p>
+            </div>
+          </div>
         </div>
       </div>
 
