--- a/app/index.html
+++ b/app/index.html
@@ -127,8 +127,10 @@
             <p>独学道場は、あなたと彼らの間に絆をつくる、世界最高のオンライン学習コミュニティです。</p>
           </div>
           <div class="col-lg-4">
-            <p>Dokugaku Dojo</p>
-            <p>独学道場は、あなたと彼らの間に絆をつくる、世界最高のオンライン学習コミュニティです。</p>
+            <ul class="list-unstyled">
+              <li>Twitter</li>
+              <li>Facebook</li>
+            </ul>
           </div>
         </div>
       </div>
