--- a/app/index.html
+++ b/app/index.html
@@ -92,19 +92,25 @@
           <h3>メンバー</h3>
           <p class="lead">Dokugaku Dojoのメンバーです。世界中の独学マスターを募集してます。</p>
 
-          <div class="thumbnail">
-            <img src="https://placehold.it/200x200" alt="thumb">
-            <div class="caption">
-              <h3>深山 雄太</h3>
-              <p>エンジニア</p>
+          <div class="member-section">
+            <div class="member">
+              <div class="member-avatar">
+                <img src="https://placehold.it/180x180" alt="thumb">
+              </div>
+              <div class="caption">
+                <p class="name">深山 雄太</p>
+                <p>エンジニア</p>
+              </div>
             </div>
-          </div>
 
-          <div class="thumbnail">
-            <img src="https://placehold.it/200x200" alt="thumb">
-            <div class="caption">
-              <h3>北郷 裕太郎</h3>
-              <p>エンジニア</p>
+            <div class="member">
+              <div class="member-avatar">
+                <img src="https://placehold.it/180x180" alt="thumb">
+              </div>
+              <div class="caption">
+                <p class="name">北郷 裕太郎</p>
+                <p>エンジニア</p>
+              </div>
             </div>
           </div>
         </div>
