--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>dokugaku dojo</title>
+    <title>Dokugaku Dojo</title>
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
@@ -35,7 +35,9 @@
           <li><a href="#">メンバー</a></li>
           <li><a href="#">申し込み</a></li>
         </ul>
-        <h3 class="text-muted">Dokugaku Dojo</h3>
+        <h3 class="text-muted">
+          <img src="./images/dokugaku-dojo-logo.png" alt="Dokugaku Dojo" class="logo" />
+        </h3>
       </div>
 
       <div class="jumbotron">
@@ -129,7 +131,7 @@
       <div class="footer">
         <div class="row">
           <div class="col-lg-4">
-            <p>Dokugaku Dojo</p>
+            <p><img src="./images/dokugaku-dojo-logo-2.png" alt="Dokugaku Dojo" class="logo" /></p>
             <p>独学道場は、あなたと彼らの間に絆をつくる、世界最高のオンライン学習コミュニティです。</p>
           </div>
           <div class="col-lg-4">
