--- a/app/index.html
+++ b/app/index.html
@@ -28,12 +28,12 @@
     <![endif]-->
 
     <div class="container-fluid">
-      <div class="header">
+      <div id="top-section" class="header">
         <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="#">トップ</a></li>
-          <li><a href="#">Dojoの仕組み</a></li>
-          <li><a href="#">メンバー</a></li>
-          <li><a href="#">申し込み</a></li>
+          <li><a href="#top-section">トップ</a></li>
+          <li><a href="#flow-section">Dojoの仕組み</a></li>
+          <li><a href="#member-section">メンバー</a></li>
+          <li><a href="#apply-section">申し込み</a></li>
         </ul>
         <h3 class="text-muted">
           <img src="./images/dokugaku-dojo-logo.png" alt="Dokugaku Dojo" class="logo" />
@@ -52,12 +52,12 @@
         </div>
       </div>
 
-      <div class="row marketing">
+      <div id="flow-section" class="row marketing">
         <div class="col-lg-12">
           <h3>Dojoの仕組み</h3>
           <p class="lead">独学道場は、あなたが「手を動かして何かを学ぶ時間」を最大化させるための場所です。</p>
           <div class="flow-section">
-            <div class="flow-image" style="background-image: url('https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150');"></div>
+            <div class="flow-image" style="background-image: url('../images/screen-02.png');"></div>
             <div class="flow-body">
               <h4>程よい緊張感が、あなたの独学時間の質を変えます。</h4>
               <p>
@@ -67,7 +67,7 @@
             </div>
           </div>
           <div class="flow-section odd">
-            <div class="flow-image" style="background-image: url('https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150');"></div>
+            <div class="flow-image" style="background-image: url('../images/screen-01.png');"></div>
             <div class="flow-body">
               <h4>共に時間を過ごす仲間と、情報交換をしましょう。</h4>
               <p>
@@ -77,7 +77,7 @@
             </div>
           </div>
           <div class="flow-section">
-            <div class="flow-image" style="background-image: url('https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150');"></div>
+            <div class="flow-image" style="background-image: url('../images/meetup-01.jpg');"></div>
             <div class="flow-body">
               <h4>成果発表を利用し「次のステージ」に進みましょう。</h4>
               <p>
@@ -96,16 +96,16 @@
           Dojoの風景
         </div>
         <div class="col-xs-12 thumbnails">
-          <div class="thumbnail" style="background-image: url('https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150');"></diV>
-          <div class="thumbnail" style="background-image: url('https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150');"></diV>
-          <div class="thumbnail" style="background-image: url('https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150');"></diV>
-          <div class="thumbnail" style="background-image: url('https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150');"></diV>
-          <div class="thumbnail" style="background-image: url('https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150');"></diV>
-          <div class="thumbnail" style="background-image: url('https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150');"></diV>
+          <div class="thumbnail" style="background-image: url('../images/meetup-02.jpg');"></diV>
+          <div class="thumbnail" style="background-image: url('../images/note-02.png');"></diV>
+          <div class="thumbnail" style="background-image: url('../images/activity-02.jpg');"></diV>
+          <div class="thumbnail" style="background-image: url('../images/note-01.png');"></diV>
+          <div class="thumbnail" style="background-image: url('../images/activity-01.jpg');"></diV>
+          <div class="thumbnail" style="background-image: url('../images/calendar-01.png');"></diV>
         </div>
       </div>
 
-      <div class="row marketing">
+      <div id="member-section" class="row marketing gray">
         <div class="col-lg-12">
           <h3>主催者</h3>
           <p class="lead">Dokugaku Dojoの主催者です。世界中の独学マスターと交流しています。</p>
@@ -159,7 +159,7 @@
         </div>
       </div>
 
-      <div class="row marketing">
+      <div id="apply-section" class="row marketing">
         <div class="col-lg-12">
           <h3>申し込み方法</h3>
           <p class="lead">まずはあなたが学びたい、挑戦したい分野を申し込みフォームで私たちに教えてください。
