--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,7 @@
           <h3>Dojoの仕組み</h3>
           <p class="lead">独学道場は、あなたが「手を動かして何かを学ぶ時間」を最大化させるための場所です。</p>
           <div class="flow-section">
-            <div class="flow-image" style="background-image: url('../images/screen-02.png');"></div>
+            <div class="flow-image" style="background-image: url('./images/screen-02.png');"></div>
             <div class="flow-body">
               <h4>程よい緊張感が、あなたの独学時間の質を変えます。</h4>
               <p>
@@ -67,7 +67,7 @@
             </div>
           </div>
           <div class="flow-section odd">
-            <div class="flow-image" style="background-image: url('../images/screen-01.png');"></div>
+            <div class="flow-image" style="background-image: url('./images/screen-01.png');"></div>
             <div class="flow-body">
               <h4>共に時間を過ごす仲間と、情報交換をしましょう。</h4>
               <p>
@@ -77,7 +77,7 @@
             </div>
           </div>
           <div class="flow-section">
-            <div class="flow-image" style="background-image: url('../images/meetup-01.jpg');"></div>
+            <div class="flow-image" style="background-image: url('./images/meetup-01.jpg');"></div>
             <div class="flow-body">
               <h4>成果発表を利用し「次のステージ」に進みましょう。</h4>
               <p>
@@ -96,12 +96,12 @@
           Dojoの風景
         </div>
         <div class="col-xs-12 thumbnails">
-          <div class="thumbnail" style="background-image: url('../images/meetup-02.jpg');"></diV>
-          <div class="thumbnail" style="background-image: url('../images/note-02.png');"></diV>
-          <div class="thumbnail" style="background-image: url('../images/activity-02.jpg');"></diV>
-          <div class="thumbnail" style="background-image: url('../images/note-01.png');"></diV>
-          <div class="thumbnail" style="background-image: url('../images/activity-01.jpg');"></diV>
-          <div class="thumbnail" style="background-image: url('../images/calendar-01.png');"></diV>
+          <div class="thumbnail" style="background-image: url('./images/meetup-02.jpg');"></diV>
+          <div class="thumbnail" style="background-image: url('./images/note-02.png');"></diV>
+          <div class="thumbnail" style="background-image: url('./images/activity-02.jpg');"></diV>
+          <div class="thumbnail" style="background-image: url('./images/note-01.png');"></diV>
+          <div class="thumbnail" style="background-image: url('./images/activity-01.jpg');"></diV>
+          <div class="thumbnail" style="background-image: url('./images/calendar-01.png');"></diV>
         </div>
       </div>
 
