--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dokugaku Dojo</title>
+    <title>Dokugaku Dojo - いつでも誰かがいるオンライン自習室</title>
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
@@ -173,7 +173,7 @@
         <div class="row">
           <div class="col-lg-4">
             <p><img src="./images/dokugaku-dojo-logo-2.png" alt="Dokugaku Dojo" class="logo" /></p>
-            <p>Dokugaku Dojo - いつでも誰かがいるオンライン自習室</p>
+            <p>いつでも誰かがいるオンライン自習室</p>
           </div>
           <div class="col-lg-4">
             <ul class="list-unstyled">
