Fix avater description

--- a/app/index.html
+++ b/app/index.html
@@ -114,45 +114,52 @@
             <div class="member">
               <div class="member-avatar">
                 <img src="./images/member-0.png" alt="thumb">
-                <div class="description-bg">
+                <!-- <div class="description-bg">
                   <p>
                     25歳でプログラミングを独学で始める。Wantedlyでソフトウェアエンジニアを経験した後、 ニューヨークのプログラミングラボ Recurse Centerに参加。 話し言葉の日本語でLispプログラミングができるJapalispを開発。
                   </p>
-                </div>
+                </div> -->
               </div>
               <div class="caption">
                 <p class="name">深山 雄太</p>
-                <p>エンジニア</p>
+                <p class="description">25歳でプログラミングを独学で始める。
+                  Wantedlyでソフトウェアエンジニアを経験した後、 ニューヨークのプログラミングラボ Recurse Centerに参加。
+                  話し言葉の日本語でLispプログラミングができるJapalispを開発。
+                </p>
               </div>
             </div>
 
             <div class="member">
               <div class="member-avatar">
                 <img src="./images/member-1.png" alt="thumb">
-                <div class="description-bg">
+                <!-- <div class="description-bg">
                   <p>
                     日本の証券会社でプロジェクトマネージャーを経験。その後MIT Media Labに訪問研究員として滞在。日本に帰国後、Pythonプログラミング道場を主催する。
                   </p>
-                </div>
+                </div> -->
               </div>
               <div class="caption">
                 <p class="name">北郷 裕太郎</p>
-                <p>エンジニア</p>
+                <p class="description">日本の証券会社でプロジェクトマネージャーを経験。
+                  その後MIT Media Labに訪問研究員として滞在。日本に帰国後、Pythonプログラミング道場を主催する。
+                </p>
               </div>
             </div><!-- member -->
 
             <div class="member">
               <div class="member-avatar">
                 <img src="./images/member-2.jpg" alt="thumb">
-                <div class="description-bg">
+                <!-- <div class="description-bg">
                   <p>
                     現在、世界中に点在する「独学の師匠」に声をかけています。独学は皆が一度は通った道です。定期的に道場に招いて、ミニトークを行います。
                   </p>
-                </div>
+                </div> -->
               </div>
               <div class="caption">
                 <p class="name">世界中の独学マスター</p>
-                <!-- <p>エンジニア</p> -->
+                <p class="description">現在、世界中に点在する「独学の師匠」に声をかけています。
+                  独学は皆が一度は通った道です。定期的に道場に招いて、ミニトークを行います。
+                </p>
               </div>
             </div><!-- member -->
           </div>
