--- a/app/index.html
+++ b/app/index.html
@@ -91,10 +91,10 @@
         </div>
       </div>
 
-      <div class="row">
-        <div style="margin-left: 50px; font-size: 20px;">
+      <div class="row" style="padding: 0; margin-top: -18px;">
+        <!-- <div style="margin-left: 50px; font-size: 20px;">
           Dojoの風景
-        </div>
+        </div> -->
         <div class="col-xs-12 thumbnails">
           <div class="thumbnail" style="background-image: url('./images/meetup-02.jpg');"></diV>
           <div class="thumbnail" style="background-image: url('./images/note-02.png');"></diV>
