--- a/app/index.html
+++ b/app/index.html
@@ -32,8 +32,8 @@
         <ul class="nav nav-pills pull-right">
           <li><a href="#top-section">トップ</a></li>
           <li><a href="#flow-section">Dojoの仕組み</a></li>
-          <li><a href="#member-section">メンバー</a></li>
-          <li><a href="#apply-section">申し込み</a></li>
+          <li><a href="#member-section">主催者</a></li>
+          <li class="blue"><a href="#apply-section">申し込み</a></li>
         </ul>
         <h3 class="text-muted">
           <img src="./images/dokugaku-dojo-logo.png" alt="Dokugaku Dojo" class="logo" />
@@ -168,7 +168,7 @@
 
       <div id="apply-section" class="row marketing">
         <div class="col-lg-12">
-          <h3>申し込み方法</h3>
+          <h3>申し込み</h3>
           <p class="lead">まずはあなたが学びたい、挑戦したい分野を申し込みフォームで私たちに教えてください。
 参加は無料です。</p>
 
