--- a/app/index.html
+++ b/app/index.html
@@ -172,7 +172,7 @@
           <p class="lead">まずはあなたが学びたい、挑戦したい分野を申し込みフォームで私たちに教えてください。
 参加は無料です。</p>
 
-          <button type="button" class="marketing-btn">独学道場に申し込む</button>
+          <a href="http://goo.gl/forms/5UrCCyr3ZM" target="_blank" class="marketing-btn">独学道場に申し込む</a>
         </div>
       </div>
 
@@ -193,14 +193,14 @@
     </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
+    <!-- <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
       function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
       e=o.createElement(i);r=o.getElementsByTagName(i)[0];
       e.src='https://www.google-analytics.com/analytics.js';
       r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
       ga('create','UA-XXXXX-X');ga('send','pageview');
-    </script>
+    </script> -->
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
