--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dokugaku Dojo - いつでも誰かがいるオンライン自習室</title>
+    <title>Dokugaku Dojo - 生涯の仲間と出会えるオンライン自習室</title>
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
@@ -43,7 +43,7 @@
       <div class="jumbotron">
         <div class="cover">
         <div class="jumbotron-inner">
-          <h1><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>いつでも、誰かがいる場所。</h1>
+          <h1><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>生涯の仲間と出会う場所。</h1>
           <p class="lead">
             世界中に、あなたと同じくらい、そして あなたよりもがんばっている仲間がいる。<br/>
             ここは、あなたと彼らが同じバーチャルスペースを共有するオンライン自習室です。</p>
@@ -55,7 +55,7 @@
       <div id="flow-section" class="row marketing">
         <div class="col-lg-12">
           <h3>Dojoの仕組み</h3>
-          <p class="lead">独学道場は、あなたが「手を動かして何かを学ぶ時間」を最大化させるための場所です。</p>
+          <p class="lead">独学道場は、「実際に手を動かして何かを学ぶ人」同士が仲間になる場所です。</p>
           <div class="flow-section">
             <div class="flow-image" style="background-image: url('./images/screen-02.png');"></div>
             <div class="flow-body">
@@ -180,7 +180,7 @@
         <div class="row">
           <div class="col-lg-4">
             <p><img src="./images/dokugaku-dojo-logo-2.png" alt="Dokugaku Dojo" class="logo" /></p>
-            <p>いつでも誰かがいるオンライン自習室</p>
+            <p>生涯の仲間と出会えるオンライン自習室</p>
           </div>
           <div class="col-lg-4">
             <ul class="list-unstyled">
