--- a/app/index.html
+++ b/app/index.html
@@ -172,7 +172,7 @@
           <p class="lead">まずはあなたが学びたい、挑戦したい分野を申し込みフォームで私たちに教えてください。
 参加は無料です。</p>
 
-          <button type="button" class="marketing-btn">独学道場に申し込む</button>
+          <button onclick="window.location.href='http://goo.gl/forms/pfXRnrZ8wL'" type="button" class="marketing-btn">独学道場に申し込む</button>
         </div>
       </div>
 
