modify catch copy

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dokugaku Dojo - 生涯の仲間と出会えるオンライン自習室</title>
+    <title>Dokugaku Dojo - 世界中に勉強仲間をつくるオンライン自習室</title>
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
@@ -43,7 +43,7 @@
       <div class="jumbotron">
         <div class="cover">
         <div class="jumbotron-inner">
-          <h1><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>生涯の仲間と出会う場所。</h1>
+          <h1><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>世界中に、仲間をつくろう。</h1>
           <p class="lead">
             世界中に、あなたと同じくらい、そして あなたよりもがんばっている仲間がいる。<br/>
             ここは、あなたと彼らが同じバーチャルスペースを共有するオンライン自習室です。</p>
@@ -59,7 +59,7 @@
           <div class="flow-section">
             <div class="flow-image" style="background-image: url('./images/screen-02.png');"></div>
             <div class="flow-body">
-              <h4>程よい緊張感が、あなたの独学時間の質を変えます。</h4>
+              <h4>程よい緊張感が、あなたを勉強に駆り立てます。</h4>
               <p>
                 私たちの行動は、環境に絶えず影響を受けています。
                 少人数のグループビデオチャットが絶えず行われているオンライン自習部屋で、程よい緊張感を持ちながら手を動かしましょう。
@@ -180,7 +180,7 @@
         <div class="row">
           <div class="col-lg-4">
             <p><img src="./images/dokugaku-dojo-logo-2.png" alt="Dokugaku Dojo" class="logo" /></p>
-            <p>生涯の仲間と出会えるオンライン自習室</p>
+            <p>世界中に勉強仲間をつくるオンライン自習室</p>
           </div>
           <div class="col-lg-4">
             <ul class="list-unstyled">
