--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
         <div class="col-lg-12">
           <h3>Dojoの仕組み</h3>
           <p class="lead">独学道場は、「実際に手を動かして何かを学ぶ人」同士が仲間になる場所です。</p>
-          <div class="flow-section">
+          <div class="flow-section first">
             <div class="flow-image" style="background-image: url('./images/screen-02.png');"></div>
             <div class="flow-body">
               <h4>程よい緊張感が、あなたを勉強に駆り立てます。</h4>
