--- a/app/index.html
+++ b/app/index.html
@@ -100,12 +100,12 @@
           Dojoの風景
         </div> -->
         <div class="col-xs-12 thumbnails">
-          <div class="thumbnail" style="background-image: url('./images/meetup-02.jpg');"></diV>
-          <div class="thumbnail" style="background-image: url('./images/note-02.png');"></diV>
           <div class="thumbnail" style="background-image: url('./images/activity-02.jpg');"></diV>
-          <div class="thumbnail" style="background-image: url('./images/note-01.png');"></diV>
+          <div class="thumbnail" style="background-image: url('./images/screen-02.png');"></diV>
           <div class="thumbnail" style="background-image: url('./images/activity-01.jpg');"></diV>
-          <div class="thumbnail" style="background-image: url('./images/calendar-01.png');"></diV>
+          <div class="thumbnail" style="background-image: url('./images/activity-01.jpg');"></diV>
+            <div class="thumbnail" style="background-image: url('./images/meetup-05.jpg');"></diV>
+              <div class="thumbnail" style="background-image: url('./images/meetup-06.jpg');"></diV>
         </div>
       </div>
 
