changed catch txt

--- a/app/index.html
+++ b/app/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dokugaku Dojo - 世界中に勉強仲間をつくるオンライン自習室</title>
-    <meta property="og:title" content="Dokugaku Dojo - 世界中に勉強仲間をつくるオンライン自習室" />
-    <meta property="og:description" content="世界中に、あなたと同じくらい、そして あなたよりもがんばっている仲間がいる。" />
+    <title>Dokugaku Dojo - エンジニアが他人の学習の仕方を学ぶ場所</title>
+    <meta property="og:title" content="Dokugaku Dojo - エンジニアが他人のやり方を学ぶ場所。" />
+    <meta property="og:description" content="ひとりで手を動かして何かをつくっているエンジニアのための楽園へようこそ" />
     <meta property="og:type" content="article" />
     <meta property="og:image" content="http://dokugaku.io/images/og.jpg" />
 
@@ -55,10 +55,10 @@
       <div class="jumbotron">
         <div class="cover">
         <div class="jumbotron-inner">
-          <h1><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>世界中に、仲間をつくろう。</h1>
+          <h1><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>あの人の学習の仕方を学ぼう。</h1>
           <p class="lead">
-            世界中に、あなたと同じくらい、そして あなたよりもがんばっている仲間がいる。<br/>
-            ここは、あなたと彼らが同じバーチャルスペースを共有するオンライン自習室です。</p>
+            ひとりで手を動かして何かをつくるエンジニアのための楽園へようこそ。<br/>
+            独学道場は、エンジニアが他の人のやり方（学習の仕方）を学ぶ場所です。</p>
           <!-- <p><a class="btn btn-lg btn-success" href="#">Splendid!</a></p> -->
         </div>
         </div>
